--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "del": "^1.1.1",
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.3",
+    "gulp-csso": "^1.0.0",
+    "gulp-expect-file": "0.0.7",
     "gulp-jshint": "~1.9.0",
     "gulp-less": "^2.0.1",
+    "gulp-plumber": "^0.6.6",
     "gulp-uglify": "^1.1.0",
+    "gulp-uncss": "^1.0.0",
+    "gulp-util": "^3.0.3",
     "gulp-watch": "~0.6.5",
     "jshint-stylish": "~0.1.3",
     "less-plugin-autoprefix": "^1.3.0",
