--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-expect-file": "0.0.7",
     "gulp-jshint": "~1.9.0",
     "gulp-less": "^2.0.1",
+    "gulp-livereload": "^3.7.0",
     "gulp-plumber": "^0.6.6",
     "gulp-uglify": "^1.1.0",
     "gulp-uncss": "^1.0.0",
